# pdf-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: comparator.py  database.py  entities.py  handlers.py  init_db.sql  page_processor.py  pdf2files.py  translate_pdf.py  utils.py
test/: test_comparator.py  test_handlers.py  test_page_processor.py
